# portfolio-management

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARTICLE-VIBE-CODING.md  CHANGELOG-2025-10-29-FearGreed.md  CHANGELOG-2025-10-29-TwelveData.md  CHANGELOG-2025-10-30-MarketIndicators.md  CLAUDE.md  DEBUGGING.md  Makefile  PRD.md  PROJECT-RETROSPECTIVE.md  PROJECT-STATS.md  README.md  SECURITY-AUDIT-REPORT.md  SECURITY.md  STORIES.md  article.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  seo-optimized-vibe-coding-article.md  test-upload.html
backend/: .dockerignore  Dockerfile  EPIC3_IMPLEMENTATION_SUMMARY.md  alembic.ini  alpha_vantage_service.py  analysis_router.py  analysis_schemas.py  analysis_service.py  cache_service.py  claude_service.py  coingecko_service.py  config.py  coverage.json  csv_parser.py  currency_converter.py  database.py  database_reset_service.py  database_router.py  fifo_calculator.py  generate_prompt.py  import_router.py  main.py  market_data_aggregator.py  models.py  monitoring_router.py  portfolio_router.py  portfolio_service.py  price_cache.py  price_update_scheduler.py  prompt_renderer.py  prompt_router.py  prompt_schemas.py  prompt_service.py  pyproject.toml  rebalancing_models.py  rebalancing_router.py  rebalancing_schemas.py  rebalancing_service.py  rotate_encryption_key.py  security_utils.py  (+12 more)
backend/alembic/: env.py
backend/alembic/versions/: 2401361c88a1_epic_9_settings_management_system.py  266802e01e3d_epic_7_manual_transaction_management.py  76dec616d384_initial_migration_create_all_tables.py  (+2 more)
backend/tests/: __init__.py  conftest.py  manual_claude_integration_test.py  test_alpha_vantage_service.py  test_analysis_router.py  test_analysis_service.py  test_claude_service.py  test_coingecko_service.py  test_crypto_parser.py  test_csv_parser.py  test_currency_converter.py  test_database.py  test_database_reset.py  test_database_router.py  test_database_stats.py  test_fifo_calculator.py  test_forecast_generation.py  test_import_api.py  test_import_integration.py  test_market_data_aggregator.py  test_pnl_calculations.py  test_portfolio_context_collection.py  test_portfolio_router.py  test_portfolio_service.py  test_position_data_collection.py  test_position_data_integration.py  test_price_cache.py  test_price_update_scheduler.py  test_prompt_api.py  test_prompt_renderer.py  test_prompt_renderer_integration.py  test_prompt_service.py  test_prompts_schema.py  test_realized_pnl.py  test_rebalancing_recommendations.py  test_rebalancing_router.py  test_rebalancing_service.py  test_rotate_encryption_key.py  test_security_utils.py  test_settings_integration.py  (+10 more)
docs/: AI_ANALYSIS.md  (+12 more)
(+191 files in other folders)
