[project]
name = "portfolio-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.119.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]
